--- a/styles/architect.css
+++ b/styles/architect.css
@@ -8,7 +8,14 @@
     font-family: 'Work Sans', sans-serif;
 }
 .btn-primary{
-    
+    border-radius: 8px;
+    color: #FFF;
+    font-size: 1.25rem;
+    font-weight: 600;
+    background: #FF900E;
+    padding: 20px 25px;
+    cursor: pointer;
+    border: 0;
 }
 
 /* header styles: */
@@ -52,4 +59,29 @@ nav li a{
 }
 .banner-description{
     color: #727272;
+}
+.banner img{
+    margin-top: 20px;
+    width: 100%;
+}
+
+/* responsive media query: */
+/* for mobile devices or small devices: */
+@media screen and (max-width: 576px) {
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }   
+}
+
+/* for tablet or medium devices: */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    header{
+        padding: 50px;
+    }
+    nav{
+        flex-direction: column;
+    }   
 }
