--- a/styles/architect.css
+++ b/styles/architect.css
@@ -7,6 +7,9 @@
     font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif;
 }
+.text-light-gray{
+    color: #727272;
+}
 .btn-primary{
     border-radius: 8px;
     color: #FFF;
@@ -57,23 +60,76 @@ nav li a{
     font-weight: 700;
     color:#131313;
 }
-.banner-description{
+/* .banner-description{
     color: #727272;
-}
+} */
 .banner img{
     margin-top: 20px;
     width: 100%;
 }
 
+
+/* main styles: */
+main{
+    max-width: 1440px;
+    margin: 70px auto;
+}
+
+/* teams styles: */
+.teams-container{
+    display: flex;
+    align-items: center;
+    margin-left: 240px;
+    margin-right: 240px;
+    /* padding-left: 240px;
+    padding-right: 240px; */
+    /* padding: 50px 240px; */
+    /* border: 2px solid black;  */
+}
+.teams-img-container{
+    /* border: 3px solid blue; */
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+    
+}
+.teams-content{
+    padding-right: 70px;
+    padding-left: 70px;
+    /* padding-top: 25%;
+    padding-bottom: 25%; */
+    /* border: 3px solid red; */
+}
+.teams-title{
+    font-size: 2.8rem;
+}
+.teams-title .quick-list{
+    /* color: #727272; */
+    font-weight: 500;
+}
+.teams-title .text-features{
+    color: #FF900E;
+    font-weight: 700;
+}
+
 /* responsive media query: */
+
 /* for mobile devices or small devices: */
 @media screen and (max-width: 576px) {
     header{
         padding: 20px;
     }
-    nav{
+    nav,
+    .teams-container{
         flex-direction: column;
     }   
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    }
+    .teams-content{
+        padding-right: 10px;
+        padding-left: 10px;
+    }
 }
 
 /* for tablet or medium devices: */
@@ -81,43 +137,11 @@ nav li a{
     header{
         padding: 50px;
     }
-    nav{
+    nav,
+    .teams-container{
         flex-direction: column;
-    }   
-}
-
-/* main styles: */
-main{
-    max-width: 1440px;
-    margin: 0 auto;
-}
-
-/* teams styles: */
-.teams-container{
-    display: flex;
-    align-items: center;
-    padding-left: 240px;
-    padding-right: 240px;
-    /* padding: 50px 240px; */
-    /* border: 2px solid black; */
-}
-.teams-img-container{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1.5rem;
-}
-.teams-content{
-    padding-right: 70px;
-    padding-left: 70px;
-}
-.teams-title{
-    font-size: 2.8rem;
-}
-.teams-title .quick-list{
-    color: #727272;
-    font-weight: 500;
-}
-.teams-title .text-features{
-    color: #FF900E;
-    font-weight: 700;
+    }  
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    } 
 }
