--- a/styles/architect.css
+++ b/styles/architect.css
@@ -141,6 +141,21 @@ main{
     margin-bottom: 10px;
 }
 
+/* sponsors section: */
+.sponsors{
+    text-align: center;
+}
+.sponsors-img-container{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 20px;
+}
+.sponsors-img-container img{
+    width: 165px;
+}
+
 /* responsive media query: */
 
 /* for mobile devices or small devices: */
@@ -149,7 +164,9 @@ main{
         padding: 20px;
     }
     nav,
-    .teams-container{
+    .teams-container,
+    .facts-card-container,
+    .sponsors-img-container{
         flex-direction: column;
     }   
     .teams-img-container{
@@ -159,6 +176,9 @@ main{
         padding-right: 10px;
         padding-left: 10px;
     }
+    .facts-card-container{
+        gap: 20px;
+    }
 }
 
 /* for tablet or medium devices: */
@@ -167,10 +187,18 @@ main{
         padding: 50px;
     }
     nav,
-    .teams-container{
+    .teams-container,
+    .sponsors-img-container{
         flex-direction: column;
     }  
     .teams-img-container{
         grid-template-columns: 1fr;
     } 
+    .facts-card-container{
+        /* flex-direction: column;
+        gap: 20px; */
+        display:grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+    }
 }
