--- a/styles/architect.css
+++ b/styles/architect.css
@@ -135,7 +135,10 @@ main{
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
 }
  .feature-img img{
-    height: 500px;
+    /* height: 500px; */
+    height: 90%;
+    margin-left: 50px;
+    width: 700px;
 } 
 .ten-years-badge{
     border-radius: 8px;
@@ -143,11 +146,17 @@ main{
     background: #FF900E;
     width: 342px;
     padding: 40px;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
 }
 .ten-years-badge h2{
+    margin: 0;
     font-size: 4rem;
 }
-
+.ten-years-badge p{
+    font-size: 1.5rem;
+}
 /* facts section: */
 .facts-card-container{
     display: flex;
@@ -196,10 +205,19 @@ main{
     }
     nav,
     .teams-container,
+    .features,
     .facts-card-container,
     .sponsors-img-container{
         flex-direction: column;
     }   
+    .feature-img img{
+        width:90%;
+        margin-left: 0;
+    }
+    .ten-years-badge{
+        position: static;
+        max-width: 300px;
+    }
     .teams-img-container{
         grid-template-columns: 1fr;
     }
@@ -219,6 +237,7 @@ main{
     }
     nav,
     .teams-container,
+    .features,
     .sponsors-img-container{
         flex-direction: column;
     }  
